# nur-cms

./: .env.example  .gitignore  .prettierrc  .sql-formatter.json  Cargo.toml  LICENSE  README.md  Readme.md  docker-compose.yml  package-lock.json  package.json  vite.config.ts  vite.example.config.ts
.cargo/: config.toml
assets/: .env.example  nur-cms.service
backend/: Cargo.toml  build.rs
backend/app/: Cargo.toml  build.rs
backend/app/examples/: logging.rs  tower_logging.rs
backend/app/src/: main.rs
backend/app/src/serve/: routes.rs
backend/app/src/utils/: extend_args.rs  logging.rs  mod.rs
backend/core/: Cargo.toml  sqlx.toml
backend/core/migrations/: 0001_init_database.sql  0002_media_constraints.sql
backend/core/src/: lib.rs
backend/core/src/api/: auth.rs  mod.rs  request.rs
backend/core/src/api/routes/: auth_user.rs  authors.rs  categories.rs  comments.rs  configuration.rs  contact.rs  entries.rs  locales.rs  misc.rs  mod.rs  node_templates.rs
backend/core/src/db/: mod.rs  models.rs  queries.rs  serialize.rs
backend/core/src/db/fields/: comment.rs  configuration.rs  content_author.rs  content_category.rs  content_entry.rs  content_node.rs  content_tag.rs  content_type.rs  locale.rs  mail_target.rs  mod.rs  node_template.rs  output_type.rs  table.rs
backend/core/src/db/handles/: auth_users.rs  authors.rs  categories.rs  comments.rs  configuration.rs  core.rs  entries.rs  media.rs
backend/core/src/file/: helper.rs  processing.rs  routes.rs
backend/core/src/mail/: client.rs
backend/core/src/middleware/: governor.rs
backend/core/src/sse/: mod.rs  routes.rs
backend/core/src/utils/: ast_serialize.rs  cmd_args.rs  errors.rs  importer.rs  mod.rs  spam_detection.rs
backend/examples/: logging.rs
backend/src/: lib.rs  main.rs
backend/src/api/: auth.rs  file.rs  mod.rs  routes.rs  routes_auth_user.rs
backend/src/api/routes/: authors.rs  categories.rs  comments.rs  configuration.rs  contact.rs  content_types.rs  entries.rs  locales.rs  media.rs  misc.rs  mod.rs  tags.rs
backend/src/db/: fields.rs  handles.rs  mod.rs  models.rs  queries.rs  serialize.rs
backend/src/db/fields/: auth_role.rs  auth_user.rs  configuration.rs  content_entry.rs  locale.rs  media.rs  mod.rs  output_type.rs  table.rs  traits.rs  ts_language.rs
backend/src/db/handles/: auth_users.rs  authors.rs  categories.rs  comments.rs  config.rs  configuration.rs  core.rs  entries.rs  media.rs  mod.rs
backend/src/file/: helper.rs  mod.rs  processing.rs  routes.rs
backend/src/mail/: client.rs
backend/src/middleware/: governor.rs
backend/src/serve/: routes.rs
backend/src/sse/: mod.rs  routes.rs
backend/src/utils/: ast_serialize.rs  cmd_args.rs  errors.rs  importer.rs  logging.rs  mod.rs  spam_detection.rs
debian/: postinst
docs/: developer.md  import.md
example/: Readme.md  index.html
example/src/: App.vue
example/src/api/: content.ts
example/src/assets/: main.css
example/src/components/: AstRender.vue  HeaderMenu.vue  HomeArticle.vue  HomeFeatures.vue  HomeFooter.vue
example/src/router/: index.ts
example/src/utils/: helper.ts
example/src/views/: ArticleView.vue  HomeView.vue
frontend/: env.d.ts  eslint.config.ts  index.html  tsconfig.app.json
frontend/src/: App.vue  i18n.ts  main.ts
frontend/src/assets/css/: main.css
frontend/src/components/: AlertMsg.vue  AuthorEdit.vue  BlockModal.vue  CategoryEdit.vue  CommentEdit.vue  FileUpload.vue  GenericBlock.vue  GenericEdit.vue  GenericFilter.vue  GenericIndex.vue  GenericModal.vue  GenericPagination.vue  GenericProgress.vue  GenericTable.vue  ImageSelection.vue  MarkdownPreview.vue  MarkdownRender.vue  MediaBrowser.vue  MediaEdit.vue  MenuHeader.vue  MenuSide.vue  SseHandler.vue  TextEditor.vue
frontend/src/components/config/: ContentLocale.vue  ContentType.vue  GlobalSettings.vue  MailTargets.vue  NodeTemplates.vue
frontend/src/components/edit/: EditAuthor.vue  EditCategory.vue  EditComment.vue  EditMedia.vue
frontend/src/components/generic/: GenericEdit.vue  GenericFilter.vue  GenericIndex.vue  GenericPagination.vue  GenericTable.vue
frontend/src/components/media/: FileUpload.vue  MediaBrowser.vue
frontend/src/locales/: README.md  de-DE.ts  de.ts  en-US.ts  en.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  index.ts
frontend/src/types/: OutputType.ts  Role.ts  generic-edit.ts  index.d.ts  models.d.ts  query.d.ts  serialized.d.ts  sse.d.ts
frontend/src/utils/: error.ts  helper.ts  slugify.ts
frontend/src/views/: 404.vue  ConfigurationView.vue  HomeView.vue  LoginView.vue  MediaView.vue  UserView.vue  VerificationView.vue
frontend/src/views/article/: ArticleEdit.vue  ArticleView.vue
frontend/src/views/author/: EditView.vue  IndexView.vue
frontend/src/views/category/: EditView.vue  IndexView.vue
frontend/src/views/comment/: EditView.vue  IndexView.vue
frontend/src/views/content/: EditView.vue  IndexView.vue
frontend/src/views/event/: EditView.vue  EventView.vue  IndexView.vue
frontend/src/views/media/: IndexView.vue  MediaView.vue
frontend/src/views/page/: PageEdit.vue  PageView.vue
migrations/: 00001_init_database.sql  0001_init_database.sql  0002_optimize_fulltext_search.sql
migrations_dev/: 0001_fill_database.sql  0001_init_database.sql  0002_fill_database.sql
scripts/: build.sh  comments_from_isso.py  sync_authors.py
uploads/2025/11/: block-1024.avif  block-320.avif  block-480.avif  cover-1024.avif  cover-320.avif  cover-480.avif
