[workspace]
members = ["backend"]
resolver = "2"

[workspace.package]
description = "nur CMS backend"
readme = "README.md"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/jb-alvarado/nur-cms"
authors = ["Jonathan Baecker <jonbae77@gmail.com>"]
edition = "2024"

[profile.release]
strip = true
lto = true

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
semicolon_if_nothing_returned = "warn"
if_not_else = "warn"
redundant_closure_for_method_calls = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
redundant_else = "warn"
