[workspace]
members = ["backend/app", "backend/core"]
resolver = "2"

[workspace.package]
description = "NUR CMS - simple and fast headless CMS"
readme = "README.md"
version = "0.11.4"
license = "GPL-3.0"
repository = "https://github.com/jb-alvarado/nur-cms"
authors = ["Jonathan Baecker <jonbae77@gmail.com>"]
edition = "2024"

[profile.dev.package.image]
opt-level = 3
debug = true
codegen-units = 1

[profile.dev.package.rav1e]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
semicolon_if_nothing_returned = "warn"
if_not_else = "warn"
redundant_closure_for_method_calls = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
redundant_else = "warn"
