[package]
name = "nur-cms"
description.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[[bin]]
name = "nur-cms"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = "0.8"
axum-macros = "0.5.0"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
colored = "3"
derive_more = { version = "2", features = ["full"] }
dotenvy = "0.15"
http-body-util = "0.1"
inquire = "0.9"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
markdown = { version = "1", features = ["serde"] }
rand = "0.9"
regex = "1"
protect-axum = "0.2"
protect-endpoints-core = { version = "0.2", features = ["tower"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"
sqlformat = "0.5"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
tower-http = {version = "0.6", features = ["fs"]}
tracing = "0.1"
tracing-subscriber = { version = "=0.3.19", features = [
    "ansi",
    "env-filter",
    "time",
    "chrono",
] }
ts-rs = { version = "11", features = ["chrono-impl", "no-serde-warnings", "serde-json-impl"] }
