[package]
name = "nur-cms"
description.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
nur_core = { path = "../core" }
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
colored = "3"
dotenvy = "0.15"
include_dir = "0.7"
lazy-limit = "1"
mime_guess = "2"
protect-axum = "0.2"
real = { version = "0.1", features = ["axum"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "=0.3.19", features = [
    "ansi",
    "env-filter",
    "time",
    "chrono",
] }

[build-dependencies]
build-print = "1"

# DEBIAN DEB PACKAGE
[package.metadata.deb]
name = "nur-cms"
priority = "optional"
section = "net"
license-file = ["../../LICENSE", "0"]
depends = ""
suggests = "postgresql"
copyright = "Copyright (c) 2025, Jonathan Baecker. All rights reserved."
conf-files = ["/home/nur-cms/.env"]
assets = [
    [
        "target/release/nur-cms",
        "/usr/bin/",
        "755",
    ],
    [
        "../../assets/.env.example",
        "/home/nur-cms/.env",
        "644",
    ],
]
maintainer-scripts = "../../debian/"
systemd-units = { enable = true, unit-scripts = "../../assets" }

# RHEL RPM PACKAGE
[package.metadata.generate-rpm]
name = "nur-cms"
license = "GPL-3.0"
assets = [
    { source = "../../target/x86_64-unknown-linux-musl/release/nur-cms", dest = "/usr/bin/nur-cms", mode = "755" },
    { source = "../../assets/nur-cms.service", dest = "/lib/systemd/system/nur-cms.service", mode = "644" },
    { source = "../../assets/.env.example", dest = "/home/nur-cms/.env", mode = "644", config = true },
    { source = "../../debian/postinst", dest = "/usr/share/nur-cms/postinst", mode = "755" },
]
auto-req = "no"
post_install_script = "/usr/share/nur-cms/postinst"
