[package]
name = "backend_core"
description.workspace = true
readme.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
argon2 = { version = "0.5", features = ["std"] }
axum = { version = "0.8", features = ["multipart"] }
async-stream = "0.3"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
clap = { version = "4", features = ["derive"] }
colored = "3"
derive_more = { version = "2", features = ["full"] }
emval = { git = "https://github.com/jb-alvarado/emval.git", default-features = false }
html_parser = "0.7"
image = { version = "0.25", features = ["avif", "rayon", "png"] }
inquire = "0.9"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
lazy-limit = "1"
lettre = { version = "0.11", features = [
    "builder",
    "file-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
], default-features = false }
libwebp-sys = "0.14"
markdown = { version = "1", features = ["serde"] }
mime_guess = "2"
protect-axum = "0.2"
rand = "0.9"
real = { version = "0.1", features = ["axum"] }
regex = "1"
sanitize-filename = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = "0.27"
strum_macros = "0.27"
sqlformat = "0.5"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
ts-rs = { version = "11", features = [
    "chrono-impl",
    "no-serde-warnings",
    "serde-json-impl",
] }
uuid = { version = "1.18", features = ["v4"] }
voca_rs = "1.15"
